# hipfire

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MANUAL_REVIEW.md  PR-115-lloyd-max-cb-plan-rev-gemini.md  README.md  flake.nix
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.skills/hipfire-arch-port/: SKILL.md  contributor-onboarding.md  playbook.md  validation.md
.skills/hipfire-diag/: run-diagnostics.sh
.skills/hipfire-kernel-atlas/: SKILL.md  render-fit.sh
.skills/hipfire-kernel-tuning/: SKILL.md  case-studies.md  levers.md  playbook.md
.skills/rebase-onto-modular/: SKILL.md
benchmarks/: run_lloyd_compare.sh  run_ppl_baseline.sh
benchmarks/prompts/: agentic_hermes_system.txt  agentic_pi_system.txt  agentic_synthetic_corrupt.txt  agentic_user_multistep.txt  agentic_user_read.txt  coherence_lloyd_long.txt  dflash_resident_smoke.txt  longcode_pflash.jsonl  longcode_pflash.tok.jsonl  longprose_multidoc.jsonl  longprose_multidoc.tok.jsonl  trains-meet.txt
benchmarks/quality-baselines/: README.md
benchmarks/results/: devlog_20260506_lloyd_mq4_extension.md  devlog_20260507_lloyd_wmma_phase_a.md  devlog_20260507_mq3_lloyd_gfx1151.md  devlog_20260507_mq4_lloyd_implementation.md  devlog_20260507_mq4_lloyd_wmma_phase_a.md  devlog_20260508_lloyd_wmma_phase_c.md  devlog_20260508_mq4_lloyd_wmma_phase_c.md  devlog_20260509_mq4_lloyd_gfx1151_bench.md  devlog_20260510_mq3_batch_fanout_gfx1151.md  devlog_20260513_mq4_lloyd_kv_q8_kld.md  devlog_20260517_wmma_fa_phase11_fresh_ab.md  devlog_20260518_wmma_fa_phase11_gfx1100.md  lloyd_max_findings_20260501.md  ppl_baseline_20260501T061036Z.md  ppl_kmap_20260508.md  ppl_kmap_ffn_only_20260508.md  wmma-fa-probe-gfx1100.sh  wmma-fa-probe.sh
cli/: chat.ts  index.ts  parse_tool_calls.test.ts  tsconfig.json
crates/engine/: Cargo.toml
crates/engine/examples/: daemon.rs  dflash_smoke.rs  dflash_spec_demo.rs  dump_logits_qwen35.rs  test_wmma_correctness.rs
crates/engine/src/: dflash.rs  image.rs  speculative.rs
crates/engine/tests/: image_from_bytes.rs
crates/hipfire-arch-llama/: Cargo.toml
crates/hipfire-arch-llama/src/: arch.rs  lib.rs
crates/hipfire-arch-qwen35/: Cargo.toml
crates/hipfire-arch-qwen35-vl/: Cargo.toml
crates/hipfire-arch-qwen35-vl/src/: arch.rs  image.rs  lib.rs  qwen35_vl.rs
crates/hipfire-arch-qwen35-vl/tests/: channel_order.rs  image_from_bytes.rs
crates/hipfire-arch-qwen35/src/: arch.rs  lib.rs  pflash.rs  qwen35.rs  speculative.rs
crates/hipfire-arch-qwen35/tests/: pp_parity.rs
crates/hipfire-arch-toy/: Cargo.toml  README.md
crates/hipfire-arch-toy/src/: arch.rs  lib.rs  toy_model.rs
crates/hipfire-atlas/: Cargo.toml
crates/hipfire-atlas/src/: eval.rs  lib.rs  main.rs  parse.rs  render.rs  schema.rs  suggest.rs  task.rs
crates/hipfire-detect/: Cargo.toml
crates/hipfire-detect/src/: attractor.rs  eos_immediate.rs  lib.rs  ngram.rs  report.rs  self_check.rs  special_leak.rs  think.rs  timing.rs  toolcall.rs  whitespace_only.rs
crates/hipfire-detect/tests/: replay.rs
crates/hipfire-detect/tests/fixtures/: agentic_corrupt.jsonl  clean.jsonl  path_a_attractor.jsonl
crates/hipfire-quantize/: Cargo.toml
crates/hipfire-quantize/src/: gguf_input.rs  gptq.rs  hessian_io.rs  main.rs  precomputed_gptq.rs
crates/hipfire-runtime/: Cargo.toml
crates/hipfire-runtime/examples/: a3b_load_check.rs  a3b_multiturn_oneshot.rs  a3b_smoke_forward.rs  bench.rs  bench_batched_gemm.rs  bench_draft_f16_vs_hfq6g256.rs  bench_early_exit.rs  bench_gemv.rs  bench_hfq4g128.rs  bench_hfq6_mmq_vs_dp4a.rs  bench_hfq6_vs_hfq4.rs  bench_hfq_family.rs  bench_q4lut.rs  bench_q8.rs  bench_qwen35_forward.rs  bench_qwen35_mq4.rs  bench_wide.rs  bench_wmma_qkvza_hfq3.rs  build_kld_ref.rs  channel_test_mmq.rs  check_think_tokens.rs  coherence_probe.rs  daemon.rs  debug_dequant.rs  debug_hfq.rs  debug_hfq2.rs  decode_tokens.rs  dflash_smoke.rs  dflash_spec_demo.rs  diag_mq3_lloyd_multiacc.rs  diag_mq4_lloyd_multiacc.rs  dump_logits_qwen35.rs  dump_meta.rs  dump_norms.rs  dump_qwen35_hidden_states.rs  encode_prompt.rs  eval_gguf.rs  eval_hipfire.rs  eval_hipfire_llama.rs  greedy_dump.rs  (+80 more)
crates/hipfire-runtime/src/: arch.rs  cask.rs  cpu_router.rs  ddtree.rs  dflash.rs  eos_filter.rs  eval_common.rs  gguf.rs  hfq.rs  lib.rs  llama.rs  loop_guard.rs  prompt_frame.rs  sampler.rs  tokenizer.rs  tool_call.rs  triattn.rs  weight_pager.rs
crates/redline/: PHASE3_NONGEMV.md
docs/: ARCHITECTURE.md  CLI.md  CONFIG.md  GETTING_STARTED.md  NIXOS.md  env-vars.md
docs/methodology/: astrea-atlas-pareto-workflow.md  astrea-model-policy.md  kernel-atlas-architecture.md  kernel-atlas.md  perf-benchmarking.md
docs/notes/: upstream-pr-draft-mq8-sdot4.md
docs/perf-checkpoints/: 2026-05-06-dot2-gfx906-experiment.md  2026-05-06-mq6-baselines.md  (+8 more)
docs/plans/: INDEX.md  (+58 more)
findings/: mq4-lloyd-9b-ppl.md  mq4-lloyd-multiacc-investigation.md  path-c-qwen36.md  path-d-bandwidth-contention.md  path-d-model-b-validation.md  path-d-vs-path-c.md
nix/: dev-shell.nix  kernels.nix  module.nix  package.nix
scripts/: agentic-gate-jinja-tools.sh  agentic-gate.sh  analyze_quant_mse.py  astrea.py  audit-dispatch-coverage.sh  awq_alpha_sweep.sh  awq_coherence_check.sh  awq_f1_vs_f2.sh  awq_f2_alpha_sweep_wait.sh  bench-cold.sh  bench_humaneval_completion.sh  bench_humaneval_dflash.py  bench_quant_quality.sh  bisect_9b_decode.sh  coherence-gate-dflash.sh  coherence-gate.sh  collect_hessian.py  compare_dn_inputs.py  compare_hidden_states.py  compare_la_stages.py  compare_layer_positions.py  compile-kernels.sh  cross_engine_check.py  dflash_bench_resident_smoke.sh  dump_hf_dn_inputs.py  dump_hf_fa_stages.py  dump_hf_hidden_states.py  dump_hf_la_stages.py  fetch-eval-refs.sh  gfx906_fallback_canary.sh  gfx906_logit_divergence.sh  gptq_9b_overnight.sh  gptq_cuda.py  gptq_gpu.py  install.ps1  install.sh  kernel_atlas.py  kld_engine_floor_subtraction.py  l2norm_fp64_reference.py  logit_dump.sh  (+17 more)
tests/: test_gptq_gpu_parity.py  test_iterative_awq_gptq.py  test_kernel_atlas.py  test_kernel_atlas_skill.py
(+468 files in other folders)
