[workspace]
resolver = "2"
members = [
    "crates/hip-bridge",
    "crates/hsa-bridge",
    "crates/rdna-compute",
    "crates/hipfire-runtime",
    "crates/hipfire-arch-qwen35",
    "crates/hipfire-arch-qwen35-vl",
    "crates/hipfire-arch-llama",
    "crates/hipfire-arch-toy",
    "crates/hipfire-quantize",
    "crates/redline",
]

[workspace.package]
version = "0.1.20"
edition = "2021"
license = "MIT"
