[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Inference orchestrator for RDNA GPUs"

[features]
deltanet = ["rdna-compute/deltanet"]

[dependencies]
hip-bridge = { path = "../hip-bridge" }
rdna-compute = { path = "../rdna-compute" }
memmap2 = "0.9"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
rayon = "1"
