[package]
name = "hipfire-arch-toy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reference template for new arch crates: minimum-viable Architecture trait impl (intentionally a stub, no real model)"

# This crate is INTENTIONALLY tiny. It exists so contributors adding a new
# model architecture have a copy-paste starting point with all the pieces
# that pass the workspace build, plus heavy explanatory comments. It is
# NOT consumed by the daemon / runtime examples — see CONTRIBUTING.md
# "Crate topology" for where it fits.

[dependencies]
hipfire-runtime = { path = "../hipfire-runtime" }
hip-bridge = { path = "../hip-bridge" }
rdna-compute = { path = "../rdna-compute" }
