[package]
name = "hipfire-detect"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Observational coherence/behavior detectors — token attractors, special-token leaks, n-gram density, tool-call shape. GPU-independent. Consumed by coherence_probe and CI gate scripts."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
md5 = "0.7"
