[package]
name = "hipfire-quantize"
version.workspace = true
edition.workspace = true

[dependencies]
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
rayon = "1"
# Pure-Rust linear algebra for GPTQ Cholesky (Stage B per docs/plans/gptq.md v2).
# Chosen over nalgebra / ndarray-linalg because it has no BLAS/LAPACK dep
# and competitive FP64 dense performance.
faer = "0.24"

[dev-dependencies]
tempfile = "3"
